--- a/flashcard/uiux/templates/frontend/data.html
+++ b/flashcard/uiux/templates/frontend/data.html
@@ -33,6 +33,8 @@
 
           <div id="list-wrapper">
 
+
+
             <!-- Here comes code from javascript -->
 
           </div>
@@ -75,6 +77,10 @@
           // console.log('Data:',data)
           var list = data
           for (var i in list){
+            var status = `<button  class="btn btn-warning remembred">Remembred</button>`
+            if(list[i].remembred == true){
+              var status = `<button  class="btn btn-info remembred">Remembred</button>`
+            }
             var item = `
         <div id="accordion">
           <div class="card">
@@ -101,7 +107,7 @@
                     <button  class="btn btn-danger delete">Delete</button>
                   </div>
                   <div class="col-md-4">
-                    <button  class="btn btn-warning remembred">Remembred</button>
+                     ${status}
                   </div>
                 </div>
                 </div>
@@ -119,14 +125,13 @@
             `
 
         wrapper.innerHTML+= item
-
         }
+
 
         for (var i in list){
         var edit_btn = document.getElementsByClassName('edit')[i]
         var dlt_btn = document.getElementsByClassName('delete')[i]
         var remembered = document.getElementsByClassName('remembred')[i]
-
 
         edit_btn.addEventListener('click' , (function(item){
           return function(){
@@ -163,11 +168,9 @@
           activeCard = null
         }
 
-
         var title = document.getElementById('title').value
         var description = document.getElementById('description').value
 
-        // console.log(title , description)
 
         fetch(url, {
           method: 'POST',
@@ -183,7 +186,6 @@
         })
       })
 
-
         function editCard(card){
           activeCard = card
           // console.log(activeCard.title)
@@ -191,11 +193,8 @@
           document.getElementById('description').value = activeCard.description
         }
 
-
         function deleteCard(card){
           activeCard = card
-          console.log('delete clicked!')
-
           fetch(`http://127.0.0.1:8000/api/card_delete/${card.id}` , {
             method:'DELETE',
             headers: {
@@ -208,32 +207,24 @@
         }
 
         function  remember_card(card){
+          card.remembred = !card.remembred
 
-          if(card.remembred == False){
-            rem = True
-          }else{
-            rem = False
-          }
-          console.log('card remembred!')
-          fetch(`http://127.0.0.1:8000/api/card_remember/${card.id}`, {
+          console.log(card)
+          fetch(`http://127.0.0.1:8000/api/card_update/${card.id}`, {
             method : 'Post',
             headers: {
               'Content-type': 'application/json',
               'X-CSRFToken' : csrftoken,
             },
-            body: {'title': title, 'description':description , 'remembred':rem}
+            body: JSON.stringify({'title': card.title, 'description':card.description , 'remembred':card.remembred})
           }).then((response) => {
             refreshlist()
           })
         }
     </script>
-    
 </body>
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
 </html>
