--- a/flashcard/uiux/templates/frontend/data.html
+++ b/flashcard/uiux/templates/frontend/data.html
@@ -21,7 +21,9 @@
               <div class="flex-wrapper">
                   <input type="text" id="title" class="form-control" name="title", placeholder="Flashcard Title">
                 <br>
-                  <input type="text" id="description" class="form-control" name="description", placeholder="Description">            
+                  <input type="text" id="defination" class="form-control" name="defination", placeholder="Defination">            
+                <br>
+                  <textarea name="description" id="description" class="form-control" id="description" placeholder="Description" cols="30" rows="10"></textarea>
                 <br>
                   <input type="submit" class="btn btn-primary" id="submit">
               </div>
@@ -32,8 +34,6 @@
           <h2 style="text-align: center;">Flashcards</h2>
 
           <div id="list-wrapper">
-
-
 
             <!-- Here comes code from javascript -->
 
@@ -108,6 +108,7 @@
                   </div>
                   <div class="col-md-4">
                      ${status}
+                    
                   </div>
                 </div>
                 </div>
@@ -116,6 +117,8 @@
 
             <div id="description-${i}" class="collapse" aria-labelledby="title-${i}" data-parent="#accordion">
               <div class="card-body">
+                ${(list[i].defination)}
+                <hr>                
                 ${(list[i].description)}
               </div>
             </div>
@@ -170,6 +173,7 @@
 
         var title = document.getElementById('title').value
         var description = document.getElementById('description').value
+        var defination = document.getElementById('defination').value
 
 
         fetch(url, {
@@ -178,7 +182,7 @@
             'Content-type': 'application/json',
             'X-CSRFToken' : csrftoken,
           },
-          body:JSON.stringify({'title': title, 'description':description})
+          body:JSON.stringify({'title': title, 'description':description , 'defination':defination})
           
         }).then(function(response){
           refreshlist()
@@ -191,6 +195,7 @@
           // console.log(activeCard.title)
           document.getElementById('title').value = activeCard.title
           document.getElementById('description').value = activeCard.description
+          document.getElementById('defination').value = activeCard.defination
         }
 
         function deleteCard(card){
@@ -209,14 +214,15 @@
         function  remember_card(card){
           card.remembred = !card.remembred
 
-          console.log(card)
+          // console.log(card)
           fetch(`http://127.0.0.1:8000/api/card_update/${card.id}`, {
             method : 'Post',
             headers: {
               'Content-type': 'application/json',
               'X-CSRFToken' : csrftoken,
             },
-            body: JSON.stringify({'title': card.title, 'description':card.description , 'remembred':card.remembred})
+            // body: JSON.stringify({'title': card.title, 'description':card.description , 'remembred':card.remembred})
+            body: JSON.stringify({'title': card.title, 'remembred':card.remembred})
           }).then((response) => {
             refreshlist()
           })
